Fixed #1785: User API: Remove_User/Restore_User Submitted by: sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2967 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/exceptions_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/exceptions_en.properties
@@ -467,13 +467,18 @@ rest.authenticationservice.authenticate.missing.username=Username parameter is m
 rest.authenticationservice.authenticate.missing.password=Password parameter is missing
 rest.authenticationservice.authenticate.missing.studyname=Study name parameter is missing
 rest.authentication.authorisedUserDoesNotHaveAccess=Authorised user does not have access
+rest.createUser.emailIsNotValid=Email is not valid
 rest.createUser.usernameHasBeenTaken=Username has been taken
 rest.createUser.operationFailed=Failed to create user
-rest.createUser.roleDoesNotExist=Role with id "{0}" does not exist.
-rest.createUser.studyDoesNotExist=Study with id "{0}" does not exist.
-rest.createUser.itsForbiddenToAssignSiteLevelRoleToStudy=It's forbidden to assign a site level role to a study.
-rest.createUser.itsForbiddenToAssignStudyLevelRoleToSite=It's forbidden to assign a study level role to a site.
+rest.createUser.roleDoesNotExist=Role with id "{0}" does not exist
+rest.createUser.studyDoesNotExist=Study with id "{0}" does not exist
+rest.createUser.itsForbiddenToAssignSiteLevelRoleToStudy=It's forbidden to assign a site level role to a study
+rest.createUser.itsForbiddenToAssignStudyLevelRoleToSite=It's forbidden to assign a study level role to a site
 rest.authentication.http404=Service unavailable
+rest.userAPI.userDoesNotExist=User does not exist
+rest.userAPI.itIsForbiddenToPerformThisOperationOnRootUser=It is forbidden to perform this operation on 'root' user
+rest.userAPI.itIsForbiddenToPerformThisOperationOnYourself=It is forbidden to perform this operation on yourself
+rest.userAPI.itIsForbiddenToPerformThisOperationOnUserThatDoesNotBelongToCurrentUserScope=It is forbidden to perform this operation on user that does not belong to current user's scope
 rest.userservice.createuser.missing.username=Username parameter is missing
 rest.userservice.createuser.empty.username=Username parameter is empty
 rest.userservice.createuser.missing.firstname=Firstname parameter is missing
@@ -494,6 +499,10 @@ rest.userservice.createuser.missing.displaypassword=Displaypassword parameter is
 rest.userservice.createuser.empty.displaypassword=Displaypassword parameter is empty
 rest.userservice.createuser.missing.role=Role parameter is missing
 rest.userservice.createuser.empty.role=Role parameter is empty
+rest.userservice.removeuser.missing.username=Username parameter is missing
+rest.userservice.removeuser.empty.username=Username parameter is empty
+rest.userservice.restoreuser.missing.username=Username parameter is missing
+rest.userservice.restoreuser.empty.username=Username parameter is empty
 rest.studyEventDefinition.wrongType=Wrong type
 rest.studyEventDefinition.calendaredVisitCanNotBeRepeating=Calendared Event cannot be repeating
 rest.studyEventDefinition.onlyCalendaredEventsCanBeReferenced=Only Calendared Events can be referenced
@@ -530,6 +539,7 @@ rest.eventservice.addcrf.missing.crfname=CrfName parameter is missing
 rest.eventservice.addcrf.empty.eventid=EventId parameter is empty
 rest.eventservice.addcrf.missing.eventid=EventId parameter is missing
 rest.createEvent.operationFailed=Failed to create Study Event Definition
+rest.addCrf.operationFailed=Failed to add Event Definition Crf
 rest.eventservice.editevent.empty.id=Id parameter is empty
 rest.eventservice.editevent.missing.id=Id parameter is missing
 rest.eventservice.getInfo.missing.id=Id parameter is missing
