Fixes #2500: We need to focus common logic in the services & validators and share it between REST API & CC servlets. Submitted by sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2989 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/exceptions_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/exceptions_en.properties
@@ -449,6 +449,8 @@ trial_id_not_configured_correctly = Trial ID must be specified either on the ser
 specify_valid_trial_id = Specify a valid Trial Id to proceed.
 randomization_can_be_performer_only_at_site = Randomization can only be performed on a site.
 no_permission_to_evaluate=No permission to open crf evaluation page
+itsForbiddenToAssignSiteLevelRoleToStudy=It's forbidden to assign a site level role to a study
+itsForbiddenToAssignStudyLevelRoleToSite=It's forbidden to assign a study level role to a site
 
 rest.methodProducesOnlyThe=Method produces only the ''{0}''
 rest.parameterIsNotSupported=Parameter ''{0}'' is not supported
@@ -470,10 +472,6 @@ rest.authentication.authorisedUserDoesNotHaveAccess=Authorised user does not hav
 rest.createUser.emailIsNotValid=Email is not valid
 rest.createUser.usernameHasBeenTaken=Username has been taken
 rest.createUser.operationFailed=Failed to create user
-rest.createUser.roleDoesNotExist=Role with id "{0}" does not exist
-rest.createUser.studyDoesNotExist=Study with id "{0}" does not exist
-rest.createUser.itsForbiddenToAssignSiteLevelRoleToStudy=It's forbidden to assign a site level role to a study
-rest.createUser.itsForbiddenToAssignStudyLevelRoleToSite=It's forbidden to assign a study level role to a site
 rest.authentication.http404=Service unavailable
 rest.userAPI.userDoesNotExist=User does not exist
 rest.userAPI.itIsForbiddenToPerformThisOperationOnRootUser=It is forbidden to perform this operation on 'root' user
