--- a/core/src/main/resources/org/akaza/openclinica/i18n/exceptions_ru.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/exceptions_ru.properties
@@ -705,6 +705,12 @@ job_modification_error = \u0412\u0430\u0448\u0438 \u0438\u0437\u043c\u0435\u043d
 #field_not_a_positive_integer =  This is not a positive integer.
 #field_not_a_positive_integer = Это не положительное целое число.
 field_not_a_positive_integer = \u042d\u0442\u043e \u043d\u0435 \u043f\u043e\u043b\u043e\u0436\u0438\u0442\u0435\u043b\u044c\u043d\u043e\u0435 \u0446\u0435\u043b\u043e\u0435 \u0447\u0438\u0441\u043b\u043e\u002e
+#itsForbiddenToAssignSiteLevelRoleToStudy=It's forbidden to assign a site level role to a study.
+#itsForbiddenAssignSiteLevelRoleToStudy=Роль уровня центра не может быть назначена в исследование.
+itsForbiddenToAssignSiteLevelRoleToStudy=\u0420\u043E\u043B\u044C \u0443\u0440\u043E\u0432\u043D\u044F \u0446\u0435\u043D\u0442\u0440\u0430 \u043D\u0435 \u043C\u043E\u0436\u0435\u0442 \u0431\u044B\u0442\u044C \u043D\u0430\u0437\u043D\u0430\u0447\u0435\u043D\u0430 \u0432 \u0438\u0441\u0441\u043B\u0435\u0434\u043E\u0432\u0430\u043D\u0438\u0435.
+#itsForbiddenToAssignStudyLevelRoleToSite=It's forbidden to assign a study level role to a site.
+#itsForbiddenToAssignStudyLevelRoleToSite=Роль уровня исследования не может быть назначена в центр.
+itsForbiddenToAssignStudyLevelRoleToSite=\u0420\u043E\u043B\u044C \u0443\u0440\u043E\u0432\u043D\u044F \u0438\u0441\u0441\u043B\u0435\u0434\u043E\u0432\u0430\u043D\u0438\u044F \u043D\u0435 \u043C\u043E\u0436\u0435\u0442 \u0431\u044B\u0442\u044C \u043D\u0430\u0437\u043D\u0430\u0447\u0435\u043D\u0430 \u0432 \u0446\u0435\u043D\u0442\u0440.
 #rest.authentication.onlyTheHttpsIsSupported=Only https communication is supported
 #rest.authentication.onlyTheHttpsIsSupported=Поддерживается только https протокол
 rest.authentication.onlyTheHttpsIsSupported=\u041F\u043E\u0434\u0434\u0435\u0440\u0436\u0438\u0432\u0430\u0435\u0442\u0441\u044F \u0442\u043E\u043B\u044C\u043A\u043E https \u043F\u0440\u043E\u0442\u043E\u043A\u043E\u043B
@@ -750,18 +756,6 @@ rest.createUser.usernameHasBeenTaken=\u0418\u043C\u044F \u043F\u043E\u043B\u044C
 #rest.createUser.operationFailed=Failed to create user
 #rest.createUser.operationFailed=Не удалось создать пользователя
 rest.createUser.operationFailed=\u041D\u0435 \u0443\u0434\u0430\u043B\u043E\u0441\u044C \u0441\u043E\u0437\u0434\u0430\u0442\u044C \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044F
-#rest.createUser.roleDoesNotExist=Role with id "{0}" does not exist.
-#rest.createUser.roleDoesNotExist=Роль с идентификатором "{0}" не существует.
-rest.createUser.roleDoesNotExist=\u0420\u043E\u043B\u044C \u0441 \u0438\u0434\u0435\u043D\u0442\u0438\u0444\u0438\u043A\u0430\u0442\u043E\u0440\u043E\u043C "{0}" \u043D\u0435 \u0441\u0443\u0449\u0435\u0441\u0442\u0432\u0443\u0435\u0442.
-#rest.createUser.studyDoesNotExist=Study with id "{0}" does not exist.
-#rest.createUser.studyDoesNotExist=Исследование с идентификатором "{0}" не существует.
-rest.createUser.studyDoesNotExist=\u0418\u0441\u0441\u043B\u0435\u0434\u043E\u0432\u0430\u043D\u0438\u0435 \u0441 \u0438\u0434\u0435\u043D\u0442\u0438\u0444\u0438\u043A\u0430\u0442\u043E\u0440\u043E\u043C "{0}" \u043D\u0435 \u0441\u0443\u0449\u0435\u0441\u0442\u0432\u0443\u0435\u0442.
-#rest.createUser.itsForbiddenToAssignSiteLevelRoleToStudy=It's forbidden to assign a site level role to a study.
-#rest.createUser.itsForbiddenAssignSiteLevelRoleToStudy=Роль уровня центра не может быть назначена в исследование.
-rest.createUser.itsForbiddenToAssignSiteLevelRoleToStudy=\u0420\u043E\u043B\u044C \u0443\u0440\u043E\u0432\u043D\u044F \u0446\u0435\u043D\u0442\u0440\u0430 \u043D\u0435 \u043C\u043E\u0436\u0435\u0442 \u0431\u044B\u0442\u044C \u043D\u0430\u0437\u043D\u0430\u0447\u0435\u043D\u0430 \u0432 \u0438\u0441\u0441\u043B\u0435\u0434\u043E\u0432\u0430\u043D\u0438\u0435.
-#rest.createUser.itsForbiddenToAssignStudyLevelRoleToSite=It's forbidden to assign a study level role to a site.
-#rest.createUser.itsForbiddenToAssignStudyLevelRoleToSite=Роль уровня исследования не может быть назначена в центр.
-rest.createUser.itsForbiddenToAssignStudyLevelRoleToSite=\u0420\u043E\u043B\u044C \u0443\u0440\u043E\u0432\u043D\u044F \u0438\u0441\u0441\u043B\u0435\u0434\u043E\u0432\u0430\u043D\u0438\u044F \u043D\u0435 \u043C\u043E\u0436\u0435\u0442 \u0431\u044B\u0442\u044C \u043D\u0430\u0437\u043D\u0430\u0447\u0435\u043D\u0430 \u0432 \u0446\u0435\u043D\u0442\u0440.
 #rest.createUser.authorisedUserIsNotAssignedToStudy=Authorised user is not assigned to study "{0}"
 #rest.createUser.authorisedUserIsNotAssignedToStudy=Авторизованный пользователь не назначен в исследование "{0}"
 rest.createUser.authorisedUserIsNotAssignedToStudy=\u0410\u0432\u0442\u043E\u0440\u0438\u0437\u043E\u0432\u0430\u043D\u043D\u044B\u0439 \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044C \u043D\u0435 \u043D\u0430\u0437\u043D\u0430\u0447\u0435\u043D \u0432 \u0438\u0441\u0441\u043B\u0435\u0434\u043E\u0432\u0430\u043D\u0438\u0435 "{0}"
