--- a/core/src/main/resources/org/akaza/openclinica/i18n/page_messages_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/page_messages_en.properties
@@ -852,6 +852,8 @@ the_subject_group_class_updated_succesfully = The subject group class was update
 
 the_user_account = The user account\u0009
 
+the_user_could_not_be_restored_due_database_error = The user could not be restored due to a database error.
+
 the_user_could_not_be_deleted_due_database_error = The user could not be deleted due to a database error.
 
 the_user_could_not_be_unlocked_due_database_error = The user {0} could not be unlocked due to a database error.
