--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
@@ -2443,7 +2443,7 @@ username2 = User Name
 
 invalid_phone_number_format = Invalid phone number format
 
-phone_number_format_ex = ex: +375295002030
+phone_number_format_ex = ex:
 
 username@institution = username@institution
 
