--- a/core/src/main/resources/org/akaza/openclinica/i18n/format_ru.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/format_ru.properties
@@ -124,7 +124,7 @@ oc_date_format_string = yyyy-MM-dd
 # in the user interface.
 # Years may not be 2 digits in the application.
 #########################################
-phone_format = 123-456-7890
+phone_format = +375295002030
 
 #########################################
 # phone_regexp
@@ -132,7 +132,7 @@ phone_format = 123-456-7890
 # The 'phone_regexp' property is the regular expression for check against phone
 # numbers entered by the user.
 #########################################
-phone_regexp = [0-9]{3}[\\-\\.][0-9]{3}[\\-\\.][0-9]{4}
+phone_regexp = \\+{0,1}\\d{1,}
 
 
 locale_string = us
