--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
@@ -3660,9 +3660,9 @@ username2 = \u0418\u043c\u044f \u043f\u043e\u043b\u044c\u0437\u043e\u0432\u0430\
 #invalid_phone_number_format =  Invalid phone number format
 #invalid_phone_number_format = Неверный формат номера телефона
 invalid_phone_number_format = \u041d\u0435\u0432\u0435\u0440\u043d\u044b\u0439 \u0444\u043e\u0440\u043c\u0430\u0442 \u043d\u043e\u043c\u0435\u0440\u0430 \u0442\u0435\u043b\u0435\u0444\u043e\u043d\u0430
-#phone_number_format_ex =  ex: +375295002030
-#phone_number_format_ex = пример: +79101234567
-phone_number_format_ex = \u043f\u0440\u0438\u043c\u0435\u0440\u003a \u002b\u0037\u0039\u0031\u0030\u0031\u0032\u0033\u0034\u0035\u0036\u0037
+#phone_number_format_ex =  ex:
+#phone_number_format_ex = пример:
+phone_number_format_ex = \u043f\u0440\u0438\u043c\u0435\u0440\u003a
 #username@institution =   username@institution
 #username@institution = username@institution
 username@institution = \u0075\u0073\u0065\u0072\u006e\u0061\u006d\u0065\u0040\u0069\u006e\u0073\u0074\u0069\u0074\u0075\u0074\u0069\u006f\u006e
