--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_zh.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_zh.properties
@@ -3587,9 +3587,9 @@ username2 = \u7528\u6237\u540d\u79f0
 #invalid_phone_number_format =  Invalid phone number format
 #invalid_phone_number_format = 无效的电话号码格式
 invalid_phone_number_format = \u65e0\u6548\u7684\u7535\u8bdd\u53f7\u7801\u683c\u5f0f
-#phone_number_format_ex =  ex: +375295002030
-#phone_number_format_ex = ex： +375295002030
-phone_number_format_ex = \u0065\u0078\uff1a \u002b\u0033\u0037\u0035\u0032\u0039\u0035\u0030\u0030\u0032\u0030\u0033\u0030
+#phone_number_format_ex =  ex:
+#phone_number_format_ex = ex：
+phone_number_format_ex = \u0065\u0078\uff1a
 #username@institution =   username@institution
 #username@institution = username@institution
 username@institution = \u0075\u0073\u0065\u0072\u006e\u0061\u006d\u0065\u0040\u0069\u006e\u0073\u0074\u0069\u0074\u0075\u0074\u0069\u006f\u006e
