Fixed #2343: Add a Features fields to Study Definition Submitted by: vincent
git-svn-id: https://svn.clinovo.com/clincapture/trunk@3011 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
@@ -371,6 +371,8 @@ business_admin = Business Admin
 
 business_administrator = Business Administrator
 
+calendared_visits = Calendared visits
+
 cancel = Cancel
 
 cancel_creation = Cancel Creation
@@ -699,6 +701,8 @@ created_by = Created By
 
 created_date = Created Date
 
+crf_annotation = CRF Annotation
+
 # crf header
 
 crf_version_ID = CRF Version ID
@@ -853,6 +857,7 @@ download_notes_in_PDF = Download notes in PDF
 download_spreadsheet = Download SpreadSheet
 duration = Duration
 
+dynamic_group = Dynamic Group
 dynamic_group_class = Dynamic Group Class
 dynamic_group_name = Dynamic Group Name
 
@@ -1060,6 +1065,8 @@ favourite_pet = Favorite Animal
 
 female = Female
 
+features = Features
+
 field_required = * indicates required field.
 
 
@@ -1227,6 +1234,8 @@ instructions = Instructions
 
 instructions_extract_select_CRF_and_group = <p>Please select one CRF from the left side info panel, then select one or more items in a CRF that you would like to include to this dataset. You may select all items in the study by going to the "View Selected Items" (hyperlink) page and clicking "Select All".</p><p>You may also click Event Attributes/CRF/Subject Attributes to specify which event/CRF/subject attribute will be shown in the dataset.</p>
 
+interactive_dashboards = Interactive Dashboards
+
 internet_explorer_users = Internet Explorer users
 
 interventional = Interventional
@@ -1264,6 +1273,8 @@ it_may_be_restored_by = It may be restored by a system administrator.
 item_ID = Item ID
 
 item_data = Item Data
+
+item_level_sdv = Item Level SDV
 
 item_meta_crf_att = Item Metadata: CRF Version Level Attributes
 
@@ -1683,6 +1694,10 @@ purpose = Purpose
 
 question_number_label = Question Number Label
 
+randomization = randomization
+
+randomization_cap = Randomization
+
 randomization_result = Randomization Result
 
 randomization_date = Randomization Date
@@ -1863,6 +1878,8 @@ roles = Roles
 
 
 run_time = Run Time (Seconds)
+
+sas_extracts = SAS Extracts
 
 save = Save
 
@@ -2091,6 +2108,8 @@ study_description = Study Description
 
 study_description_status = Study Description and Status
 
+study_evaluator = Study Evaluator
+
 study_event = Study Event
 
 # submit/VerifyImport.jsp
@@ -2161,6 +2180,8 @@ subject_and_event_attributes = Subject and Event Attributes
 subject_assignment = Subject Assignment
 
 subject_attributes = Subject Attributes
+
+subject_casebook_in_pdf = Subject Casebook In PDF
 
 subject_event_status = Subject Event Status
 
