--- a/core/src/main/resources/org/akaza/openclinica/i18n/exceptions_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/exceptions_en.properties
@@ -292,6 +292,8 @@ study_event_not_belong_study = study event does not belong to the current study
 
 subject_ID_used_by_another_choose_unique = Study Subject ID has been used by another subject in current study, please choose a unique one.
 
+subject_person_ID_used_by_another_choose_unique = Person ID has been used by another subject in current study, please choose a unique one.
+
 subject_with_person_ID = A subject with the Person ID:
 
 syntax_incorrect = The syntax is incorrect.
