Fixes #2467: Extend session life time, to allow user to restore and continue data entry for previously edited CRF. Submitted by denis
git-svn-id: https://svn.clinovo.com/clincapture/trunk@3024 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
@@ -58,6 +58,8 @@ CRFs_in_this_study_event = CRFs in this Study Event
 
 CRF_unavailable = This CRF is currently unavailable for data entry.
 
+confirm_action = Confirm Action
+
 Currently_entering_data = is currently entering data.
 
 
@@ -4078,3 +4080,6 @@ job_view_on_another_study = Job was created in a context of another study. If yo
 job_note_about_scope = Please note that created Job will be shown only in the scope of study for which it was created.
 
 view_log = View Log
+resume_data_entry = Resume Data Entry
+delete_data_and_exit = Delete Data & Exit
+session_timed_out = Your session timed out because you were not actively using the system.
