--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
@@ -79,6 +79,9 @@ CRFs_in_this_study_event  = \u0418\u0420\u041a \u0432 \u044d\u0442\u043e\u043c \
 #CRF_unavailable  =  This CRF is currently unavailable for data entry.
 #CRF_unavailable  = Эта ИРК в настоящий момент недоступна для ввода данных.
 CRF_unavailable  = \u042d\u0442\u0430 \u0418\u0420\u041a \u0432 \u043d\u0430\u0441\u0442\u043e\u044f\u0449\u0438\u0439 \u043c\u043e\u043c\u0435\u043d\u0442 \u043d\u0435\u0434\u043e\u0441\u0442\u0443\u043f\u043d\u0430 \u0434\u043b\u044f \u0432\u0432\u043e\u0434\u0430 \u0434\u0430\u043d\u043d\u044b\u0445\u002e
+#confirm_action = Confirm Action
+#confirm_action = Подтверждение Действия
+confirm_action = \u041f\u043e\u0434\u0442\u0432\u0435\u0440\u0436\u0434\u0435\u043d\u0438\u0435 \u0414\u0435\u0439\u0441\u0442\u0432\u0438\u044f
 #crfs_masking = CRFs Masking
 #crfs_masking = Маскирование ИРК
 crfs_masking = \u041c\u0430\u0441\u043a\u0438\u0440\u043e\u0432\u0430\u043d\u0438\u0435 \u0418\u0420\u041a
@@ -7763,3 +7766,15 @@ job_note_about_scope = \u041f\u043e\u0436\u0430\u043b\u0443\u0439\u0441\u0442\u0
 #view_log = View Log
 #view_log = Просмотр Лога
 view_log = \u041f\u0440\u043e\u0441\u043c\u043e\u0442\u0440 \u041b\u043e\u0433\u0430
+
+#resume_data_entry = Resume Data Entry
+#resume_data_entry = Продолжить Ввод Данных
+resume_data_entry = \u041f\u0440\u043e\u0434\u043e\u043b\u0436\u0438\u0442\u044c \u0412\u0432\u043e\u0434 \u0414\u0430\u043d\u043d\u044b\u0445
+
+#delete_data_and_exit = Delete Data & Exit
+#delete_data_and_exit = Удалить Данные и Выйти
+delete_data_and_exit = \u0423\u0434\u0430\u043b\u0438\u0442\u044c \u0414\u0430\u043d\u043d\u044b\u0435 \u0438 \u0412\u044b\u0439\u0442\u0438
+
+#session_timed_out = Your session timed out because you were not actively using the system.
+#session_timed_out = Ваша сессия истекла потому что вы не использовали систему в течении длителього промежутка времени.
+session_timed_out = \u0412\u0430\u0448\u0430 \u0441\u0435\u0441\u0441\u0438\u044f \u0438\u0441\u0442\u0435\u043a\u043b\u0430 \u043f\u043e\u0442\u043e\u043c\u0443 \u0447\u0442\u043e \u0432\u044b \u043d\u0435 \u0438\u0441\u043f\u043e\u043b\u044c\u0437\u043e\u0432\u0430\u043b\u0438 \u0441\u0438\u0441\u0442\u0435\u043c\u0443 \u0432 \u0442\u0435\u0447\u0435\u043d\u0438\u0438 \u0434\u043b\u0438\u0442\u0435\u043b\u044c\u043e\u0433\u043e \u043f\u0440\u043e\u043c\u0435\u0436\u0443\u0442\u043a\u0430 \u0432\u0440\u0435\u043c\u0435\u043d\u0438.
