--- a/core/src/main/resources/org/akaza/openclinica/i18n/terms_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/terms_en.properties
@@ -205,6 +205,8 @@ initial_data_entry_complete = initial data entry complete
 
 initial_data_entry_completed = initial data entry completed
 
+partial_data_entry = partial data entry
+
 initial = initial
 
 int = int
