Fixes #2362: Randomization license enforcement. Submitted by denis
git-svn-id: https://svn.clinovo.com/clincapture/trunk@3043 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
@@ -1706,6 +1706,8 @@ randomization_result = Randomization Result
 
 randomization_date = Randomization Date
 
+randomization_disabled_update_plan = Randomization is disabled for this study. Please upgrade your study plan.
+
 re-populated = re-populated
 
 reason_for_change = Reason for Change
