--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
@@ -2546,6 +2546,9 @@ randomization_result  = \u0420\u0435\u0437\u0443\u043b\u044c\u0442\u0430\u0442 \
 #randomization_date  =  Randomization Date
 #randomization_date  = Дата рандомизации
 randomization_date  = \u0414\u0430\u0442\u0430 \u0440\u0430\u043d\u0434\u043e\u043c\u0438\u0437\u0430\u0446\u0438\u0438
+#randomization_disabled_update_plan = Randomization is disabled for this study. Please upgrade your study plan.
+#randomization_disabled_update_plan = Рандомизация отключена для этого исследования. Пожалуйста обновите ваш план.
+randomization_disabled_update_plan = \u0420\u0430\u043d\u0434\u043e\u043c\u0438\u0437\u0430\u0446\u0438\u044f \u043e\u0442\u043a\u043b\u044e\u0447\u0435\u043d\u0430 \u0434\u043b\u044f \u044d\u0442\u043e\u0433\u043e \u0438\u0441\u0441\u043b\u0435\u0434\u043e\u0432\u0430\u043d\u0438\u044f\u002e \u041f\u043e\u0436\u0430\u043b\u0443\u0439\u0441\u0442\u0430 \u043e\u0431\u043d\u043e\u0432\u0438\u0442\u0435 \u0432\u0430\u0448 \u043f\u043b\u0430\u043d\u002e
 #re-populated  =  re-populated
 #re-populated  = восстановленный
 re-populated  = \u0432\u043e\u0441\u0441\u0442\u0430\u043d\u043e\u0432\u043b\u0435\u043d\u043d\u044b\u0439
