Fixes #2357: Colorize Button under Medical Coding. Submitted by denis
git-svn-id: https://svn.clinovo.com/clincapture/trunk@3048 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
@@ -4087,3 +4087,10 @@ view_log = View Log
 resume_data_entry = Resume Data Entry
 delete_data_and_exit = Delete Data & Exit
 session_timed_out = Your session timed out because you were not actively using the system.
+
+warning_message = Warning message
+check_item_you_want_to_delete = Check the item you want to delete:
+alias = Alias
+are_you_sure_you_want_to_delete_this_code = Are you sure you want to delete this code?
+medical_coding_process_message = Medical coding process message
+retrieving_medical_codes = Retrieving medical codes. Please wait...
