--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
@@ -7781,3 +7781,22 @@ delete_data_and_exit = \u0423\u0434\u0430\u043b\u0438\u0442\u044c \u0414\u0430\u
 #session_timed_out = Your session timed out because you were not actively using the system.
 #session_timed_out = Ваша сессия истекла потому что вы не использовали систему в течении длителього промежутка времени.
 session_timed_out = \u0412\u0430\u0448\u0430 \u0441\u0435\u0441\u0441\u0438\u044f \u0438\u0441\u0442\u0435\u043a\u043b\u0430 \u043f\u043e\u0442\u043e\u043c\u0443 \u0447\u0442\u043e \u0432\u044b \u043d\u0435 \u0438\u0441\u043f\u043e\u043b\u044c\u0437\u043e\u0432\u0430\u043b\u0438 \u0441\u0438\u0441\u0442\u0435\u043c\u0443 \u0432 \u0442\u0435\u0447\u0435\u043d\u0438\u0438 \u0434\u043b\u0438\u0442\u0435\u043b\u044c\u043e\u0433\u043e \u043f\u0440\u043e\u043c\u0435\u0436\u0443\u0442\u043a\u0430 \u0432\u0440\u0435\u043c\u0435\u043d\u0438.
+
+#warning_message = Warning message
+#warning_message = Предупреждение
+warning_message = \u041f\u0440\u0435\u0434\u0443\u043f\u0440\u0435\u0436\u0434\u0435\u043d\u0438\u0435
+#check_item_you_want_to_delete = Check the item you want to delete:
+#check_item_you_want_to_delete = Выберите элемент, который вы хотите удалить:
+check_item_you_want_to_delete = \u0412\u044b\u0431\u0435\u0440\u0438\u0442\u0435 \u044d\u043b\u0435\u043c\u0435\u043d\u0442\u002c \u043a\u043e\u0442\u043e\u0440\u044b\u0439 \u0432\u044b \u0445\u043e\u0442\u0438\u0442\u0435 \u0443\u0434\u0430\u043b\u0438\u0442\u044c\u003a
+#alias = Alias
+#alias = Синоним
+alias = \u0421\u0438\u043d\u043e\u043d\u0438\u043c
+#are_you_sure_you_want_to_delete_this_code = Are you sure you want to delete this code?
+#are_you_sure_you_want_to_delete_this_code = Вы уверены, что хотите удалить этот код?
+are_you_sure_you_want_to_delete_this_code = \u0412\u044b \u0443\u0432\u0435\u0440\u0435\u043d\u044b\u002c \u0447\u0442\u043e \u0445\u043e\u0442\u0438\u0442\u0435 \u0443\u0434\u0430\u043b\u0438\u0442\u044c \u044d\u0442\u043e\u0442 \u043a\u043e\u0434\u003f
+#medical_coding_process_message = Medical coding process message
+#medical_coding_process_message = Медицинское кодирование в процессе
+medical_coding_process_message = \u041c\u0435\u0434\u0438\u0446\u0438\u043d\u0441\u043a\u043e\u0435 \u043a\u043e\u0434\u0438\u0440\u043e\u0432\u0430\u043d\u0438\u0435 \u0432 \u043f\u0440\u043e\u0446\u0435\u0441\u0441\u0435
+#retrieving_medical_codes = Retrieving medical codes. Please wait...
+#retrieving_medical_codes = Получаем медицинские коды. Пожалуйста подождите...
+retrieving_medical_codes = \u041f\u043e\u043b\u0443\u0447\u0430\u0435\u043c \u043c\u0435\u0434\u0438\u0446\u0438\u043d\u0441\u043a\u0438\u0435 \u043a\u043e\u0434\u044b\u002e \u041f\u043e\u0436\u0430\u043b\u0443\u0439\u0441\u0442\u0430 \u043f\u043e\u0434\u043e\u0436\u0434\u0438\u0442\u0435\u002e\u002e\u002e
