Fixes #2551: Improve test coverage of the "crf-lib" module. Submitted by sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@3090 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/exceptions_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/exceptions_en.properties
@@ -558,6 +558,76 @@ rest.eventservice.restorecrf.empty.eventid=Event Id parameter is empty
 rest.eventservice.restorecrf.missing.crfname=Crf Name parameter is missing
 rest.eventservice.restorecrf.empty.crfname=Crf Name parameter is empty
 rest.event.eventDefinitionCrfIsNotFound=Event Definition Crf for Crf ''{0}'' is not found in study event definition ''{1}''
+rest.crf.crfNameDoesNotExist=Crf with name ''{0}'' does not exist
+rest.importCrf.operationFailed=Failed to import new crf
+rest.importCrfVersion.operationFailed=Failed to import new crf version
+rest.crfservice.importcrf.missing.jsondata=Json Data parameter is missing
+rest.crfservice.importcrf.empty.jsondata=Json Data parameter is empty
+rest.crfservice.importcrfversion.missing.jsondata=Json Data parameter is missing
+rest.crfservice.importcrfversion.empty.jsondata=Json Data parameter is empty
+rest.crfservice.importcrfversion.missing.crfname=Crf Name parameter is missing
+rest.crfservice.importcrfversion.empty.crfname=Crf Name parameter is empty
+
+rest.crfservice.phiIsNotValid=Item with name ''{0}'' has wrong phi data or it's missed.
+rest.crfservice.revisionNotesIsBlank=Revision notes is blank
+rest.crfservice.sectionLabelIsBlank=Section label is blank
+rest.crfservice.sectionLabelIsDuplicated=Section label ''{0}'' is duplicated
+rest.crfservice.sectionTitleIsBlank=Section title is blank
+rest.crfservice.groupLabelIsBlank=Group label is blank
+rest.crfservice.groupLabelIsDuplicated=Group label ''{0}'' is duplicated
+rest.crfservice.groupRepeatNumber=Group repeat number must be a positive integer, or blank
+rest.crfservice.groupRepeatMax=Group repeat maximum must be a positive integer, or blank
+rest.crfservice.itemNameIsBlank=Item name is blank
+rest.crfservice.itemNameIsDuplicated=Item name ''{0}'' is duplicated
+rest.crfservice.itemDescriptionIsBlank=Item description is blank
+rest.crfservice.itemNameFormat=You can only use letters or numbers for item name
+rest.crfservice.itemSectionLabelIsNotValid=Section label ''{0}'' is not valid for item name ''{1}''
+rest.crfservice.itemGroupLabelIsNotValid=Group label ''{0}'' is not valid for item name ''{1}''
+rest.crfservice.itemParentItemIsNotValid=Parent item is not valid for item name ''{0}''
+rest.crfservice.hasNestedParentItem=Parent item for item name ''{0}'' has nested parent item
+rest.crfservice.repeatingGroupHasParentItem=Item name ''{0}'' belongs to repeating group and has parent item
+rest.crfservice.resonseTypeIsBlank=Response type is blank for item name ''{0}''
+rest.crfservice.resonseTypeIsNotValid=Response type is not valid for item name ''{0}''
+rest.crfservice.hasRadioWithDefault=ClinCapture does not support default values with radio response type
+rest.crfservice.resonseLabelIsBlank=Response label is blank for item name ''{0}''
+rest.crfservice.resonseLabelShouldBeFile=Response label for item name ''{0}'' should be 'file'
+rest.crfservice.resonseOptionsTextIsBlank=Response options text is blank for item name ''{0}''
+rest.crfservice.resonseOptionsValuesIsBlank=Response options values is blank for item name ''{0}''
+rest.crfservice.itemHasDifferentValuesForOptionsText=Response options text can not be different for the same response label ''{0}''
+rest.crfservice.itemHasDifferentNumberOfOptionsText=You have specified different number of Options and Values for item name ''{0}''
+rest.crfservice.itemHasDifferentNumberOfOptionsValues=Response values can not be different for the same response label ''{0}''
+rest.crfservice.itemHasDifferentValuesForOptionsValues=Response values can not be different for the same response label ''{0}''
+rest.crfservice.expressionStartsWithFunc=The expression does not start with 'func' for item name ''{0}''
+rest.crfservice.expressionIsNotValid=The expression is invalid for item name ''{0}''
+rest.crfservice.itemHasIncompleteOptionValuePair=There are an incomplete number of option-value pairs for item name ''{0}''
+rest.crfservice.itemMustBeListedBeforeAnotherItem=Item ''{0}'' must be listed before the item ''{1}''
+rest.crfservice.itemsMustHaveTheSameGroup=Item ''{0}'' and item ''{1}'' must have the same group
+rest.crfservice.itemsShouldNotHaveTheSameGroup=Item ''{0}'' and item ''{1}'' should not have a same group
+rest.crfservice.itemDataTypeIsBlank=Item data type is blank for item name ''{0}''
+rest.crfservice.itemDataTypeIsNotValid=Item data type is not valid for item name ''{0}''
+rest.crfservice.itemDataTypeShouldBeFile=Item data type for item name ''{0}'' sould be 'file'
+rest.crfservice.responseOptionsValuesShouldBeInteger=Response values should be integer for item name ''{0}''
+rest.crfservice.responseOptionsValuesShouldBeReal=Response values should be real for item name ''{0}''
+rest.crfservice.doesNotMatchDataTypeOfItemWithSameResponseLabel=Data type for item ''{0}'' does not match the data type of the item with the same response label ''{1}''
+rest.crfservice.widthDecimalIsNotAvailableFor=Width decimal is unavailable for "single-select", "multi-select", "chechbox" and "radio". Check item ''{0}''
+rest.crfservice.widthDecimalHasErrors=Error message for width decimal for item ''{0}'': {1}
+rest.crfservice.regexpIsNotValid=Regexp is not valid for item ''{0}''
+rest.crfservice.validationColumnIsNotValid=Validation expression is not valid for item ''{0}''
+rest.crfservice.regexpErrorMsgIsBlank=Validation message is blank for item ''{0}''
+rest.crfservice.regexpIsInvalidRegularExpression=Item ''{0}'' has an invalid regular expression
+rest.crfservice.validationColumnHasInvalidRegularExpression=Item ''{0}'' has an invalid regular expression
+rest.crfservice.requiredIsNotValid=Required is not valid for item ''{0}''
+rest.crfservice.itemDisplayStatusIsNotValid=Display status is not valid for item ''{0}''
+rest.crfservice.controlResponseValueIsNotValid=Control response value is not valid for item ''{0}''
+rest.crfservice.controlItemNameIsNotValid=Control item name is not valid for item ''{0}''
+rest.crfservice.simpleConditionalDisplayIsNotValid=SCD is not valid for item ''{0}''
+rest.crfservice.ontologyNameIsNotValid=Ontology name is not valid for item ''{0}''
+rest.crfservice.needToUpdateCodingItemTypeToCode=Need to update coding item type to code for item ''{0}''
+rest.crfservice.needToUpdateMedicalCodingReferenceItemType=Need to update medical coding reference item type for item ''{0}''
+rest.crfservice.responseLabelHasBeenUsedForAnotherResponseType=Response label for item ''{0}'' has been used for another response type
+rest.crfservice.itemOfOneGroupBelongsToMoreThanOneSection=Items of one repeating group spread over several sections. Check items in group ''{0}''
+rest.crfservice.notUniqueItemPlacementInGroups=You have tried to assign the item ''{0}'' to a different item group than was used in previous version(s) of the CRF
+rest.crfservice.checkItem=. Check item ''{0}''
 
 there_was_an_unspecified_error = There was an unspecified error with your creation, please contact an administrator.
 not_found_in_the_db = Not found in the db
