Fixes #2509: Fix workflow for multi-casebooks generation. Submitted by Denis
git-svn-id: https://svn.clinovo.com/clincapture/trunk@3095 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
@@ -4065,7 +4065,8 @@ casebooks = Casebooks
 generate_casebooks = Generate Casebooks
 download_casebooks = Download Casebooks
 generated_casebooks_for_study = Generated casebooks for
-selected_casebooks_in_progress = Selected casebooks in progress
+selected_casebooks_in_progress = The selected casebooks are being generated. You will receive an email and message when the extract is complete.
+casebooks_generated = The casebooks have been generated. Please go to download them <a href="{0}/casebooks">here</a>.
 site_level_casebooks_in_progress = Selected casebooks in progress. Please visit 'Casebook' page for details.
 
 mail.removed_by = CRF was removed by
