Fixes #2558: Issue with casebooks. Submitted by denis
git-svn-id: https://svn.clinovo.com/clincapture/trunk@3099 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
@@ -4095,3 +4095,4 @@ alias = Alias
 are_you_sure_you_want_to_delete_this_code = Are you sure you want to delete this code?
 medical_coding_process_message = Medical coding process message
 retrieving_medical_codes = Retrieving medical codes. Please wait...
+please_select_subjects_to_generate_casebooks = Please select at least one subject to start casebooks generation.
