--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
@@ -7803,3 +7803,7 @@ medical_coding_process_message = \u041c\u0435\u0434\u0438\u0446\u0438\u043d\u044
 #retrieving_medical_codes = Retrieving medical codes. Please wait...
 #retrieving_medical_codes = Получаем медицинские коды. Пожалуйста подождите...
 retrieving_medical_codes = \u041f\u043e\u043b\u0443\u0447\u0430\u0435\u043c \u043c\u0435\u0434\u0438\u0446\u0438\u043d\u0441\u043a\u0438\u0435 \u043a\u043e\u0434\u044b\u002e \u041f\u043e\u0436\u0430\u043b\u0443\u0439\u0441\u0442\u0430 \u043f\u043e\u0434\u043e\u0436\u0434\u0438\u0442\u0435\u002e\u002e\u002e
+
+#please_select_subjects_to_generate_casebooks = Please select at least one subject to start casebooks generation.
+#please_select_subjects_to_generate_casebooks = Пожалуйста выберите по крайней мере одного субъекта, для того чтобы начать генераций отчетов.
+please_select_subjects_to_generate_casebooks = \u041f\u043e\u0436\u0430\u043b\u0443\u0439\u0441\u0442\u0430 \u0432\u044b\u0431\u0435\u0440\u0438\u0442\u0435 \u043f\u043e \u043a\u0440\u0430\u0439\u043d\u0435\u0439 \u043c\u0435\u0440\u0435 \u043e\u0434\u043d\u043e\u0433\u043e \u0441\u0443\u0431\u044a\u0435\u043a\u0442\u0430\u002c \u0434\u043b\u044f \u0442\u043e\u0433\u043e \u0447\u0442\u043e\u0431\u044b \u043d\u0430\u0447\u0430\u0442\u044c \u0433\u0435\u043d\u0435\u0440\u0430\u0446\u0438\u0439 \u043e\u0442\u0447\u0435\u0442\u043e\u0432\u002e
