Fixes #2525: Add a Save & Exit button to Rules Studio. Submitted by denis
git-svn-id: https://svn.clinovo.com/clincapture/trunk@3110 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
@@ -1899,6 +1899,8 @@ save_and_export = Save And Export
 
 save_and_next = Save & Next CRF
 
+save_and_exit = Save & Exit
+
 save_filter = Save Filter
 
 schedule = Schedule
