--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
@@ -2839,6 +2839,9 @@ save_and_export = \u0421\u043e\u0445\u0440\u0430\u043d\u0438\u0442\u044c \u0438 
 #save_and_next = Save & Next CRF
 #save_and_next = Сохранить и След. ИРК
 save_and_next = \u0421\u043e\u0445\u0440\u0430\u043d\u0438\u0442\u044c \u0438 \u0421\u043b\u0435\u0434\u002e \u0418\u0420\u041a
+#save_and_exit = Save & Exit
+#save_and_exit = Сохранить и Выйти
+save_and_exit = \u0421\u043e\u0445\u0440\u0430\u043d\u0438\u0442\u044c \u0438 \u0412\u044b\u0439\u0442\u0438
 #save_filter =  Save Filter
 #save_filter = Сохранить фильтр
 save_filter = \u0421\u043e\u0445\u0440\u0430\u043d\u0438\u0442\u044c \u0444\u0438\u043b\u044c\u0442\u0440
