Fixes #2492: CRF API: import CRF JSON data from FS to CC. Submitted by sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@3111 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/exceptions_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/exceptions_en.properties
@@ -568,7 +568,7 @@ rest.crfservice.importcrfversion.empty.jsondata=Json Data parameter is empty
 rest.crfservice.importcrfversion.missing.crfname=Crf Name parameter is missing
 rest.crfservice.importcrfversion.empty.crfname=Crf Name parameter is empty
 
-rest.crfservice.phiIsNotValid=Item with name ''{0}'' has wrong phi data or it's missed.
+rest.crfservice.phiIsNotValid=Item ''{0}'' has wrong phi data
 rest.crfservice.revisionNotesIsBlank=Revision notes is blank
 rest.crfservice.sectionLabelIsBlank=Section label is blank
 rest.crfservice.sectionLabelIsDuplicated=Section label ''{0}'' is duplicated
