Fixes #2560: Null Pointer is thrown if user tries to upload CRF without items. Submitted by: sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@3118 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/exceptions_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/exceptions_en.properties
@@ -559,14 +559,13 @@ rest.eventservice.restorecrf.missing.crfname=Crf Name parameter is missing
 rest.eventservice.restorecrf.empty.crfname=Crf Name parameter is empty
 rest.event.eventDefinitionCrfIsNotFound=Event Definition Crf for Crf ''{0}'' is not found in study event definition ''{1}''
 rest.crf.crfNameDoesNotExist=Crf with name ''{0}'' does not exist
+rest.crf.crfNameIsEmpty=Crf name is empty
 rest.importCrf.operationFailed=Failed to import new crf
 rest.importCrfVersion.operationFailed=Failed to import new crf version
 rest.crfservice.importcrf.missing.jsondata=Json Data parameter is missing
 rest.crfservice.importcrf.empty.jsondata=Json Data parameter is empty
 rest.crfservice.importcrfversion.missing.jsondata=Json Data parameter is missing
 rest.crfservice.importcrfversion.empty.jsondata=Json Data parameter is empty
-rest.crfservice.importcrfversion.missing.crfname=Crf Name parameter is missing
-rest.crfservice.importcrfversion.empty.crfname=Crf Name parameter is empty
 
 rest.crfservice.phiIsNotValid=Item ''{0}'' has wrong phi data
 rest.crfservice.revisionNotesIsBlank=Revision notes is blank
@@ -628,6 +627,7 @@ rest.crfservice.responseLabelHasBeenUsedForAnotherResponseType=Response label fo
 rest.crfservice.itemOfOneGroupBelongsToMoreThanOneSection=Items of one repeating group spread over several sections. Check items in group ''{0}''
 rest.crfservice.notUniqueItemPlacementInGroups=You have tried to assign the item ''{0}'' to a different item group than was used in previous version(s) of the CRF
 rest.crfservice.checkItem=. Check item ''{0}''
+crfShouldHaveAtLeastOneItem=The CRF should have at least one item.
 
 there_was_an_unspecified_error = There was an unspecified error with your creation, please contact an administrator.
 not_found_in_the_db = Not found in the db
