Fixes #2569: Null Pointer is thrown if user tries to Download Rule, and file path is invalid in the system. Submitted by: denis
git-svn-id: https://svn.clinovo.com/clincapture/trunk@3119 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
@@ -4098,3 +4098,4 @@ are_you_sure_you_want_to_delete_this_code = Are you sure you want to delete this
 medical_coding_process_message = Medical coding process message
 retrieving_medical_codes = Retrieving medical codes. Please wait...
 please_select_subjects_to_generate_casebooks = Please select at least one subject to start casebooks generation.
+file_path_is_invalid = File Path specified in the System properties is invalid, unable to download rule. Please contact your system administrator.
