Fixes #2554: Remove duplication of code from DataEntryServlet. Submitted by denis
git-svn-id: https://svn.clinovo.com/clincapture/trunk@3120 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/notes_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/notes_en.properties
@@ -871,3 +871,4 @@ application_could_not_generate_the_markup = "The application could not generate 
 failed_validation_check = Failed Validation Check
 
 problem_reading_file = There was a problem while reading Log file, please contact system administrator for more information.
+additional_values_that_were_not_present_at_initial = There are additional values here that were not present in the initial data entry. You have entered a different number of groups for the item groups containing
