--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
@@ -1599,6 +1599,8 @@ parent_note = Parent Note
 
 parent_study = Parent Study
 
+partial_data = Partial data
+
 partial_data_entry = Partial Data Entry
 
 password = Password
